crates/pg_syntax/tests/snapshots/postgres_regress/inet@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '127::2'::inet  - ('127::2'::inet - 500);"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      TypeCast@7..21
        AConst@7..15
          Sconst@7..15 "'127::2'"
        Typecast@15..17 "::"
        TypeName@17..21
          Ident@17..21 "inet"
      Whitespace@21..23 "  "
      Ascii45@23..24 "-"
      Whitespace@24..25 " "
      Ascii40@25..26 "("
      AExpr@26..46
        TypeCast@26..40
          AConst@26..34
            Sconst@26..34 "'127::2'"
          Typecast@34..36 "::"
          TypeName@36..40
            Ident@36..40 "inet"
        Whitespace@40..41 " "
        Ascii45@41..42 "-"
        Whitespace@42..43 " "
        AConst@43..46
          Iconst@43..46 "500"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

