crates/pg_syntax/tests/snapshots/postgres_regress/inet@97.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '127.0.0.1'::inet - 10000000000;"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    AExpr@7..38
      TypeCast@7..24
        AConst@7..18
          Sconst@7..18 "'127.0.0.1'"
        Typecast@18..20 "::"
        TypeName@20..24
          Ident@20..24 "inet"
      Whitespace@24..25 " "
      Ascii45@25..26 "-"
      Whitespace@26..27 " "
      AConst@27..38
        Fconst@27..38 "10000000000"
  Ascii59@38..39 ";"

