crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@104.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: insert into syscolconflicttest values (1);
---
InsertStmt@0..42
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "syscolconflicttest"
  Whitespace@30..31 " "
  SelectStmt@31..40
    Values@31..37 "values"
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    List@39..40
      AConst@39..40
        Iconst@39..40 "1"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

