crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index insertconflicti1 on insertconflict(coalesce(a, 0));"
---
IndexStmt@0..71
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..36 "insertconflicti1"
  Whitespace@36..37 " "
  On@37..39 "on"
  Whitespace@39..40 " "
  RangeVar@40..54
    Ident@40..54 "insertconflict"
  Ascii40@54..55 "("
  IndexElem@55..68
    CoalesceExpr@55..68
      Coalesce@55..63 "coalesce"
      Ascii40@63..64 "("
      ColumnRef@64..65
        Ident@64..65 "a"
      Ascii44@65..66 ","
      Whitespace@66..67 " "
      AConst@67..68
        Iconst@67..68 "0"
  Ascii41@68..69 ")"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

