crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@125.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create unique index capitals_names_unique on capitals (name);
---
IndexStmt@0..61
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  Ident@20..41 "capitals_names_unique"
  Whitespace@41..42 " "
  On@42..44 "on"
  Whitespace@44..45 " "
  RangeVar@45..53
    Ident@45..53 "capitals"
  Whitespace@53..54 " "
  Ascii40@54..55 "("
  IndexElem@55..59
    NameP@55..59 "name"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

