crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@127.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into cities values ('Las Vegas', 2.583E+5, 2174);"
---
InsertStmt@0..56
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "cities"
  Whitespace@18..19 " "
  SelectStmt@19..54
    Values@19..25 "values"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..54
      AConst@27..38
        Sconst@27..38 "'Las Vegas'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..48
        Fconst@40..48 "2.583E+5"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..54
        Iconst@50..54 "2174"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

