crates/pg_syntax/tests/snapshots/postgres_regress/insert_conflict@128.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into cities values ('Mariposa', 1200, 1953);"
---
InsertStmt@0..51
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "cities"
  Whitespace@18..19 " "
  SelectStmt@19..49
    Values@19..25 "values"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..49
      AConst@27..37
        Sconst@27..37 "'Mariposa'"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..43
        Iconst@39..43 "1200"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..49
        Iconst@45..49 "1953"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

